tests/suite/fail/generated/lexer/fail_char_63.ny
fn main() {
    let x = ? //~ ERROR Invalid character
}
